--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "@cherry-challenge/cherry-challenge",
   "private": true,
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.13",
+    "jest-extended": "^1.2.0",
     "lerna": "^4.0.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "jest": "^27.4.5",
+    "jest-junit": "^13.0.0",
+    "ts-jest": "^27.1.1"
   }
 }
