--- a/packages/extractor/package.json
+++ b/packages/extractor/package.json
@@ -28,13 +28,6 @@
     "package": "npm run build && npm publish"
   },
   "dependencies": {
-    "jest": "^27.4.5",
-    "jest-junit": "^13.0.0",
-    "nanoid": "^3.1.30",
-    "ts-jest": "^27.1.1"
-  },
-  "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "jest-extended": "^1.2.0"
+    "nanoid": "^3.1.30"
   }
 }
