--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,12 @@
    "experimentalDecorators": true,
    "target": "es6",
    "allowJs": true,
+   "esModuleInterop": true,
    "sourceMap": true,
    "lib": [
-     "es6"
+     "es6",
+     "DOM",
+     "es2019"
    ]
  },
  "exclude": [
